Completato Tablet (768-992px) - bug .row to be fixed

--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
   </head>
   <body>
     <div id="lezioni" class="container">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-12">
         <h1>Lezioni dove vuoi tu</h1>
       </div>
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-6">
         <div class="left">
           <img src="img/icon/maps.png" alt="">
           <h3>A casa tua</h3>
           Scegli il tuo maestro preferito e prenota la prima lezione a casa tua, a casa del maestro o nel suo studio
         </div>
       </div>
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-6">
         <div class="right">
           <img src="img/icon/screen.png" alt="">
           <h3>Online</h3>
@@ -31,24 +31,24 @@
     </div>
 
     <div id="steps" class="container grey">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-12">
         <h1>Come Funziona</h1>
       </div>
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-offset-2 col-md-8">
         <div class="left">
           <img src="img/search.svg" alt="">
           <h3>Cerca</h3>
           Guarda i profili dei migliori maestri della tua zona. Leggi la loro biografia e le recensioni lasciate dai loro studenti
         </div>
       </div>
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-offset-2 col-md-8">
         <div class="central">
           <img src="img/letter.svg" alt="">
           <h3>Contatta</h3>
           Scrivi gratuitamente e senza impegno ai maestri che ti interessano e fai tutte le domande che vuoi!
         </div>
       </div>
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-offset-2 col-md-8">
         <div class="right">
           <img src="img/male.svg" alt="">
           <h3>Inizia a Suonare</h3>
@@ -60,10 +60,10 @@
     </div>
 
     <div id="why" class="container grey">
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-12">
         <h1>Perchè Cademi</h1>
       </div>
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-offset-2 col-md-8">
         <div class="first">
           <img src="img/icon/profile.png" alt="">
           <h3>La più grande scuola d'Italia</h3>
@@ -71,7 +71,7 @@
           <hr>
         </div>
       </div>
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-offset-2 col-md-8">
         <div class="second">
           <img src="img/icon/secure.png" alt="">
           <h3>Soddisfazione Garantita</h3>
@@ -79,7 +79,7 @@
           <hr>
         </div>
       </div>
-      <div class="col-xs-12">
+      <div class="col-xs-12 col-md-offset-2 col-md-8">
         <div class="third">
           <img src="img/icon/flex.png" alt="">
           <h3>Flessibile e Conveniente</h3>
