--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div id="lezioni" class="container">
-      <div class="row col-xs-12 col-md-12 col-lg-12">
-        <div class="col-xs-12 col-md-12 col-lg-12">
+      <div class="row col-xs-12">
+        <div class="col-xs-12">
           <h1>Lezioni dove vuoi tu</h1>
         </div>
         <div class="col-xs-12 col-md-6 col-lg-offset-1 col-lg-5">
@@ -31,8 +31,8 @@
     </div>
 
     <div id="steps" class="container grey">
-      <div class="row col-xs-12 col-md-12 col-lg-12">
-        <div class="col-xs-12 col-md-12 col-lg-12">
+      <div class="row col-xs-12">
+        <div class="col-xs-12">
           <h1>Come Funziona</h1>
         </div>
         <div class="col-xs-12 col-md-offset-2 col-md-8 col-lg-offset-0 col-lg-4">
@@ -60,8 +60,8 @@
     </div>
 
     <div id="why" class="container grey">
-      <div class="row col-xs-12 col-md-12 col-lg-12">
-        <div class="col-xs-12 col-md-12 col-lg-12">
+      <div class="row col-xs-12">
+        <div class="col-xs-12">
           <h1>Perchè Cademi</h1>
         </div>
         <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
